<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ingredientInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient_placeholder" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredientList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
