<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cloudy9101.weltec.recipe.RecipeListFragment">


    <LinearLayout
        android:focusableInTouchMode="true"
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@android:string/search_go" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_btn"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/intelligentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/intelligent_btn"
            android:src="@android:drawable/ic_menu_compass" />

    </LinearLayout>

    <ListView
        android:id="@+id/recipeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />


</LinearLayout>