package com.cloudy9101.weltec.recipe;

import androidx.test.runner.AndroidJUnit4;
import androidx.test.rule.ActivityTestRule;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.withDecorView;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;

@RunWith(AndroidJUnit4.class)
public class LoginActivityTest {

    @Rule
    public ActivityTestRule<LoginActivity> loginActivity = new ActivityTestRule(LoginActivity.class);

    @Test
    public void testLoginNoEmail(){

        //Checking no email has been entered
        onView(withId(R.id.email)).check(matches(withText("")));

        //Clicking the login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Enter email address!"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testLoginNoPassword(){
        //Entering a valid email address
        onView(withId(R.id.email)).perform(typeText("johndoe@gmail.com"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Password must contain 6 or more characters!"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testLoginInvalidEmail(){

        //Entering invalid email
        onView(withId(R.id.email)).perform(typeText("john"));

        //Entering valid password
        onView(withId(R.id.password)).perform(typeText("password"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Login failed"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testLoginInvalidPassword(){

        //Entering valid email
        onView(withId(R.id.email)).perform(typeText("johndoe@gmail.com"));

        //Entering invalid password
        onView(withId(R.id.password)).perform(typeText("pass"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Password must contain 6 or more characters!"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testLoginUnregisteredEmail() {

        //Entering valid email
        onView(withId(R.id.email)).perform(typeText("jdoe@gmail.com"));

        //Entering valid password
        onView(withId(R.id.password)).perform(typeText("password"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Login failed"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testLoginWrongPassword(){

        //Entering valid email
        onView(withId(R.id.email)).perform(typeText("johndoe@gmail.com"));

        //Entering wrong password
        onView(withId(R.id.password)).perform(typeText("password1"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        //Checking that the toast message matches text
        onView(withText("Login failed"))
                .inRoot(withDecorView(not(is(loginActivity.getActivity().getWindow().getDecorView()))))
                .check(matches(isDisplayed()));
    }

    @Test
    public void testSuccessfulLoginandLogout() {

        //Entering valid email
        onView(withId(R.id.email)).perform(typeText("johndoe@gmail.com"));

        //Entering valid password
        onView(withId(R.id.password)).perform(typeText("password"));

        //Clicking login button
        onView(withId(R.id.login)).perform(click());

        try {
            Thread.sleep(5000);
        } catch (InterruptedException e){

        }

        //Checking that the MainActivity page opens
        onView(withId(R.id.navigation_recipes)).check(matches(isDisplayed()));

        //Navigate to 'About' fragment
        onView(withId(R.id.navigation_about)).perform(click());

        //Click logout button
        onView(withId(R.id.logoutBtn)).perform(click());

        //Check login page is displayed
        onView(withId(R.id.container)).check(matches(isDisplayed()));
    }
}